data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_656.wast
;; 7. **Conditional Branch Using Function Return**:    - Use a function that returns a boolean value as the condition for a `br_if` instruction. The function returns false, and the test should verify that the branch does not occur, testing if the return value from the function is correctly interpreted.

(assert_invalid
  (module
    (func $conditional_branch_func_return (result i32)
      (block (result i32)
        (br_if 0 (call $false_func))
      )
      (i32.const 1)
    )
    (func $false_func (result i32)
      (i32.const 0)
    )
  )
  "type mismatch"
)